# python

./: .gitignore  README.md  pyproject.toml
01-start/: basics.py  classes.py  date_time.py  files.py
02-next/: classes.py  collections.py  comprehensions.py  logging_test.py  utilities.py
03-adv/: introspect.py
10-notebooks/: start.ipynb
11-pandas/: analysis.ipynb  start.ipynb  start.py
12-numpy/: start.ipynb
13-boto3/: use_boto3.py
21-testing/: mocking.py
22-pybuilder/: build.py
notes/01-start/: basics.py  classes.py  html_parsing.py  json_parsing.py  sample.xml  strings.py  xml_parsing.py  yaml_parsing.py
notes/02-next/: classes.py  comprehensions.py
notes/03-adv/: introspect.py
notes/10-notebooks/: start.ipynb
notes/11-pandas/: pandas_eval.py  start.ipynb
notes/12-numpy/: start.ipynb
notes/22-pybuilder/: build.py
notes/22-pybuilder/src/unittest/python/: helloworld_tests.py
useful/: generate_file.py
