[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Wajdzik, Maciej <wajdzik.maciej@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.24.29"
numpy = "^1.23.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
